@@ -1,3 +1,8 @@
+2012-11-14 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
+    * scripts/HistFitter.py: reverted back to -d and -D. See inline comment
+                             for explanation. Necessary due to 
+                             http://bugs.python.org/issue9338
+
 2012-11-13 Alex Koutsman <alex.koutsman@cern.ch>
 	* Utils.cxx : bug fix in ratio calculation, only affects crash with ROOT 5.34.03 while plotting, nothing changes in calculated values
 
